# HwGDReqs

./: .gitignore  HwGDReqs.spec  HwGDReqs.spec.txt  README.md  inno.iss  main.py  pyinst.bat  pyproject.toml  requirements.txt
.github/workflows/: publish-zip.yml  publish.yml  release.yml
hwgdreqs/: api_server.py  config.py  gdbrowser.py  logging_service.py  login_dialog.py  login_worker.py  main.py  main_window.py  queue_manager.py  session_worker.py  settings_dialog.py  twitch_auth.py  twitch_chat.py  youtube_auth.py  youtube_chat.py
