[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwgdreqs"
version = "0.8.0"
description = "A Geometry Dash level requests app for streamers"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
  { name="MalikHw47" }
]
keywords = [
  "geometry dash",
  "twitch",
  "youtube",
  "streaming",
  "level requests"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "PySide6>=6.0.0",
  "requests>=2.0.0"
]

[project.scripts]
hwgdreqs = "hwgdreqs.main:main"

[project.urls]
Homepage = "https://hwgdreqs.github.io"
Issues = "https://github.com/HwGDReqs/HwGDReqs/issues"
Source = "https://github.com/HwGDReqs/HwGDReqs"
